@startuml

title __CONTROLLER's Class Diagram__\n

  namespace  {
    namespace om.weddingplanner.server {
      namespace controller {
        class com.weddingplanner.server.controller.AdvertisementController {
            + addAdvertisement()
            + getAdvertisement()
            + getAdvertisementToEdit()
            + getAdvertisements()
            + homepage()
            + newAdvertisement()
            + updateAdvertisement()
        }
      }
    }
  }
  

  namespace  {
    namespace om.weddingplanner.server {
      namespace controller {
        class com.weddingplanner.server.controller.GeneralController {
            + handleError()
            + login()
        }
      }
    }
  }
  

  namespace  {
    namespace om.weddingplanner.server {
      namespace controller {
        class com.weddingplanner.server.controller.InquiryController {
            + addInquiry()
            + addInquiry()
            + contactUs()
            + listInquiries()
        }
      }
    }
  }
  

  namespace  {
    namespace om.weddingplanner.server {
      namespace controller {
        class com.weddingplanner.server.controller.ReviewController {
            + addReview()
            + deleteReview()
        }
      }
    }
  }
  

  namespace  {
    namespace om.weddingplanner.server {
      namespace controller {
        class com.weddingplanner.server.controller.UserController {
            ~ sessionRegistry : SessionRegistry
            + addAdmin()
            + addBusiness()
            + addCustomer()
            + adminDashboard()
            + adminRemoveBusiness()
            + adminRemoveCustomer()
            + deleteCustomer()
            + getBusinessOwner()
            + getCustomer()
            + getCustomer()
            + getCustomers()
            + listCustomers()
            + newBusiness()
            + newCustomer()
            + updateBusinessAccountStatus()
            + updateCustomerProfile()
            + updateCustomerStatus()
            + updateProfile()
            + viewBusiness()
        }
      }
    }
  }
  

  com.weddingplanner.server.controller.AdvertisementController o-- com.weddingplanner.server.services.AdvertisementService : advertisementService
  com.weddingplanner.server.controller.AdvertisementController o-- com.weddingplanner.server.services.ReviewService : reviewService
  com.weddingplanner.server.controller.InquiryController o-- com.weddingplanner.server.services.InquiryService : inquiryService
  com.weddingplanner.server.controller.ReviewController o-- com.weddingplanner.server.services.AdvertisementService : advertisementService
  com.weddingplanner.server.controller.ReviewController o-- com.weddingplanner.server.services.ReviewService : reviewService
  com.weddingplanner.server.controller.ReviewController o-- com.weddingplanner.server.services.UserService : userService
  com.weddingplanner.server.controller.UserController o-- com.weddingplanner.server.services.AdvertisementService : advertisementService
  com.weddingplanner.server.controller.UserController o-- com.weddingplanner.server.services.ReviewService : reviewService
  com.weddingplanner.server.controller.UserController o-- com.weddingplanner.server.services.UserService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
